--- a/ProfessorApp/Views/HomePage.xaml
+++ b/ProfessorApp/Views/HomePage.xaml
@@ -6,36 +6,37 @@
     BackgroundColor="#222">
 
     <Grid>
+        <ScrollView Grid.Row="1">
+            <!--  Main Content  -->
+            <VerticalStackLayout Padding="20" Spacing="10">
 
-        <!--  Main Content  -->
-        <VerticalStackLayout Padding="20" Spacing="10">
+                <Label
+                    Margin="0,20,0,10"
+                    FontAttributes="Bold"
+                    FontSize="24"
+                    HorizontalOptions="Center"
+                    Text="Home Page"
+                    TextColor="White"
+                    VerticalOptions="Start" />
 
-            <Label
-                Margin="0,20,0,10"
-                FontAttributes="Bold"
-                FontSize="24"
-                HorizontalOptions="Center"
-                Text="Home Page"
-                TextColor="White"
-                VerticalOptions="Start" />
+                <Label
+                    x:Name="WelcomeLabel"
+                    Margin="0,20,0,10"
+                    FontAttributes="Bold"
+                    FontSize="24"
+                    HorizontalOptions="Center"
+                    Text="Welcome Professor...."
+                    TextColor="White"
+                    VerticalOptions="Start" />
 
-            <Label
-                x:Name="WelcomeLabel"
-                Margin="0,20,0,10"
-                FontAttributes="Bold"
-                FontSize="24"
-                HorizontalOptions="Center"
-                Text="Welcome Professor...."
-                TextColor="White"
-                VerticalOptions="Start" />
-
-            <!--  Navigation Buttons  -->
-            <Button
-                BackgroundColor="DarkOrange"
-                Clicked="GoToCoursePage"
-                Text="Courses"
-                TextColor="White"
-                MaximumWidthRequest="600" />
-        </VerticalStackLayout>
+                <!--  Navigation Buttons  -->
+                <Button
+                    BackgroundColor="DarkOrange"
+                    Clicked="GoToCoursePage"
+                    MaximumWidthRequest="600"
+                    Text="Courses"
+                    TextColor="White" />
+            </VerticalStackLayout>
+        </ScrollView>
     </Grid>
 </ContentPage>
