--- a/ProfessorApp/Views/QuizPage.xaml
+++ b/ProfessorApp/Views/QuizPage.xaml
@@ -53,7 +53,6 @@
             BackgroundColor="#333"
             BorderColor="DarkOrange"
             CornerRadius="12"
-            HeightRequest="150"
             HorizontalOptions="Center"
             IsVisible="False"
             VerticalOptions="Center"
@@ -70,7 +69,10 @@
                     x:Name="BankNameEntry"
                     Placeholder="Bank Name:"
                     TextColor="White" />
-                <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
+                <HorizontalStackLayout
+                    Margin="0,10,0,0"
+                    HorizontalOptions="Center"
+                    Spacing="10">
                     <Button
                         BackgroundColor="DarkGreen"
                         Clicked="OnSubmitQuizBankClicked"
@@ -91,7 +93,7 @@
             Grid.Row="2"
             Padding="15"
             BackgroundColor="#333"
-            BorderColor="DarkOrange"
+            BorderColor="Red"
             CornerRadius="12"
             HeightRequest="200"
             HorizontalOptions="Center"
@@ -133,7 +135,7 @@
             x:Name="DeleteConfirmationPopup"
             Grid.Row="3"
             Padding="15"
-            BackgroundColor="#fff"
+            BackgroundColor="#333"
             BorderColor="Red"
             CornerRadius="12"
             HeightRequest="200"
@@ -148,7 +150,7 @@
                     FontSize="20"
                     HorizontalOptions="Center"
                     Text="Are you sure you want to delete this question bank? This will delete any questions associated with the chosen bank. This cannot be undone."
-                    TextColor="Black" />
+                    TextColor="White" />
 
                 <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
                     <Button
@@ -226,7 +228,10 @@
                         Placeholder="Answer (Option #)"
                         TextColor="White" />
 
-                    <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
+                    <HorizontalStackLayout
+                        Margin="0,10,0,0"
+                        HorizontalOptions="Center"
+                        Spacing="10">
                         <Button
                             BackgroundColor="DarkGreen"
                             Clicked="OnSubmitQuestionClicked"
