--- a/ProfessorApp/Views/StudentManagement.xaml
+++ b/ProfessorApp/Views/StudentManagement.xaml
@@ -123,7 +123,7 @@
                         FontSize="20"
                         HorizontalOptions="Center"
                         Text="Add Student"
-                        TextColor="Black" />
+                        TextColor="White" />
 
                     <!--  Form Entries  -->
                     <Entry
@@ -187,7 +187,7 @@
                     FontSize="20"
                     HorizontalOptions="Center"
                     Text="Delete Student"
-                    TextColor="Black" />
+                    TextColor="White" />
 
                 <Entry
                     x:Name="DeleteUTDIDEntry"
@@ -213,7 +213,7 @@
         <Frame
             x:Name="ConfirmDeletePopUp"
             Padding="15"
-            BackgroundColor="White"
+            BackgroundColor="#333"
             BorderColor="Red"
             CornerRadius="12"
             HeightRequest="150"
@@ -225,7 +225,7 @@
                     FontSize="20"
                     HorizontalOptions="Center"
                     Text="Are you sure you want to delete this course? This cannot be undone."
-                    TextColor="Black" />
+                    TextColor="White" />
 
                 <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
                     <Button
