Added new UI design for login and register pages, also made it for the login page to reset all fields when going back to it and remove the error at the bottom when going to it as well

--- a/ProfessorApp/Views/HomePage.xaml
+++ b/ProfessorApp/Views/HomePage.xaml
@@ -33,20 +33,10 @@
                 <Button
                     BackgroundColor="DarkOrange"
                     Clicked="GoToCoursePage"
+                    FontAttributes="Bold"
                     MaximumWidthRequest="600"
                     Text="Courses"
-                    TextColor="White" />
-
-                <Label
-                    x:Name="SessionsLabel"
-                    Margin="0,20,0,10"
-                    FontAttributes="Bold"
-                    FontSize="24"
-                    HorizontalOptions="Center"
-                    Text="Today's Sessions:"
-                    TextColor="White"
-                    VerticalOptions="Start" />
-
+                    TextColor="DarkGreen" />
             </VerticalStackLayout>
         </ScrollView>
     </Grid>
