--- a/ProfessorApp/Views/LoginPage.xaml
+++ b/ProfessorApp/Views/LoginPage.xaml
@@ -1,27 +1,112 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ProfessorApp.Views.LoginPage"
-             Title="Attendance Manager"
-             BackgroundColor="#222">
-    <StackLayout Padding="10" VerticalOptions="Center" Spacing="20">
-        <Image Source="utd_logo.png" HeightRequest="120" VerticalOptions="Center" />
-        
-        <Label Text="Login" FontSize="Large" TextColor="White" HorizontalOptions="Center" FontAttributes="Bold" Margin="0,0,0,30" />
+<ContentPage
+    x:Class="ProfessorApp.Views.LoginPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    BackgroundColor="#769576">
+    <StackLayout
+        Padding="10"
+        Spacing="20"
+        VerticalOptions="Center">
+        <Frame
+            Padding="0"
+            BackgroundColor="White"
+            BorderColor="Transparent"
+            CornerRadius="10"
+            HasShadow="True"
+            MaximumWidthRequest="450">
+            <Grid RowDefinitions="*,*,4*">
+                <Image
+                    Grid.Row="0"
+                    Aspect="AspectFill"
+                    HorizontalOptions="FillAndExpand"
+                    MaximumHeightRequest="150"
+                    Source="login_background.png"
+                    VerticalOptions="FillAndExpand" />
 
-        <Frame Padding="20" 
-               BorderColor="DarkOrange" 
-               MaximumWidthRequest="600" 
-               CornerRadius="10" 
-               HasShadow="True"
-               BackgroundColor="#333">
-            <StackLayout Spacing="20">
-                <Entry TextColor="White" x:Name="identifierEntry" Placeholder="ID, Email or Username" />
-                <Entry TextColor="White" x:Name="passwordEntry" Placeholder="Password" IsPassword="True" />
-                <Button Text="Login" MaximumWidthRequest="400" Clicked="OnLoginClicked" Margin="0,10,0,0" BackgroundColor="Green" TextColor="White" />
-                <Button Text="Register Account" MaximumWidthRequest="400" Clicked="GoToRegister" Margin="0,10,0,0" BackgroundColor="Grey" TextColor="White" />
-                <Label x:Name="statusLabel" TextColor="Red" HorizontalOptions="Center" />
-            </StackLayout>
+                <Image
+                    Grid.Row="0"
+                    HeightRequest="100"
+                    HorizontalOptions="Center"
+                    Source="utdlogo.png"
+                    VerticalOptions="Center"
+                    WidthRequest="350" />
+
+                <BoxView
+                    Grid.Row="0"
+                    HeightRequest="50"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="End">
+                    <BoxView.Background>
+                        <LinearGradientBrush StartPoint="0,1" EndPoint="0,0">
+                            <GradientStop Offset="0" Color="White" />
+                            <GradientStop Offset="1" Color="Transparent" />
+                        </LinearGradientBrush>
+                    </BoxView.Background>
+                </BoxView>
+
+                <StackLayout
+                    Grid.Row="1"
+                    Padding="20"
+                    Spacing="20">
+                    <Label
+                        Margin="0,0,0,10"
+                        FontAttributes="Bold"
+                        FontSize="Medium"
+                        HorizontalOptions="Center"
+                        Text="Welcome Back"
+                        TextColor="DarkGreen" />
+                    <Label
+                        Margin="0,0,0,10"
+                        FontSize="15"
+                        HorizontalOptions="Center"
+                        Text="Please sign in or register a new account"
+                        TextColor="Black" />
+                    <Frame
+                        Padding="0"
+                        BackgroundColor="White"
+                        BorderColor="Black"
+                        CornerRadius="10">
+                        <Entry
+                            x:Name="identifierEntry"
+                            Placeholder="ID, Email or Username"
+                            TextColor="Black"
+                            Visual="Material" />
+                    </Frame>
+                    <Frame
+                        Padding="0"
+                        BackgroundColor="White"
+                        BorderColor="Black"
+                        CornerRadius="10">
+                        <Entry
+                            x:Name="passwordEntry"
+                            IsPassword="True"
+                            Placeholder="Password"
+                            TextColor="Black" />
+                    </Frame>
+                    <Button
+                        Margin="0,10,0,0"
+                        BackgroundColor="Orange"
+                        Clicked="OnLoginClicked"
+                        MaximumWidthRequest="400"
+                        Text="Sign In"
+                        TextColor="Black" />
+                    <Label
+                        Margin="0,0,0,-10"
+                        FontAttributes="Bold"
+                        HorizontalOptions="Center"
+                        Text="Register new account"
+                        TextColor="Green">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="GoToRegister" />
+                        </Label.GestureRecognizers>
+                    </Label>
+                    <Label
+                        x:Name="statusLabel"
+                        HorizontalOptions="Center"
+                        TextColor="Red" />
+                </StackLayout>
+            </Grid>
         </Frame>
     </StackLayout>
 </ContentPage>
