Made errors disapear whenever a frame is being reopened and for session creating made it so whenever a set start time is inserted then end time is set to 20 minutes after buy default, if ST<ET then ST=ET-20 mins

--- a/ProfessorApp/Views/QuizPage.xaml
+++ b/ProfessorApp/Views/QuizPage.xaml
@@ -48,7 +48,7 @@
                     x:Name="ShowQuestionBankPicker"
                     BackgroundColor="DarkOrange"
                     ItemsSource="{Binding BankList}"
-                    SelectedItem="{Binding ShowQuestionBank, Mode=TwoWay}"
+                    SelectedItem="{Binding SelectedBank, Mode=TwoWay}"
                     TextColor="Black"
                     WidthRequest="500" />
 
