--- a/AttendanceSystem/Components/Pages/Survey.razor
+++ b/AttendanceSystem/Components/Pages/Survey.razor
@@ -247,6 +247,17 @@
                 bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to submit?");
                 if (confirmed)
                 {
+                    var attendanceSubmission = new Attendance
+                        {
+                            SessionID = 1,
+                            UTDID = formData.StudentID,
+                            SubmissionTime = DateTime.Now,
+                            IPAddress = "192.168.1.101",
+                            AttendanceType = AttendanceType.Present
+                        };
+
+                    await AttendanceService.CreateAttendanceAsync(attendanceSubmission);
+
                     Console.WriteLine($"Submitted: {formData.StudentID}");
                     foreach (var q in questions)
                     {
