--- a/ProfessorApp/Views/AttendancePage.xaml
+++ b/ProfessorApp/Views/AttendancePage.xaml
@@ -81,7 +81,7 @@
                                 Padding="10"
                                 BackgroundColor="#333"
                                 CornerRadius="8">
-                                <Grid ColumnDefinitions="Auto,Auto,Auto,Auto,Auto" ColumnSpacing="10">
+                                <Grid ColumnDefinitions="Auto,Auto,Auto,Auto,Auto, Auto" ColumnSpacing="10">
                                     <Label
                                         Grid.Column="0"
                                         Text="{Binding FirstName}"
@@ -101,15 +101,69 @@
                                     <Label
                                         Grid.Column="4"
                                         Text="{Binding AttendanceType}"
-                                        TextColor="White" />
+                                        TextColor="White"
+                                        WidthRequest="100" />
+                                    <Button
+                                        Grid.Column="5"
+                                        Margin="50,0,0,0"
+                                        Background="DarkOrange"
+                                        Clicked="OnChangeAttendanceClicked"
+                                        Text="Change Attendance"
+                                        TextColor="Black" />
                                 </Grid>
                             </Frame>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
-
             </VerticalStackLayout>
         </ScrollView>
 
+        <Frame
+            x:Name="ChangeAttendancePopUp"
+            Grid.Row="3"
+            Padding="15"
+            BackgroundColor="#333"
+            BorderColor="DarkOrange"
+            CornerRadius="12"
+            HorizontalOptions="Center"
+            IsVisible="False"
+            VerticalOptions="Center"
+            WidthRequest="400"
+            ZIndex="1000">
+
+            <StackLayout Spacing="10">
+                <Label
+                    FontSize="20"
+                    HorizontalOptions="Center"
+                    Text="Change Attendance"
+                    TextColor="White" />
+
+                <Picker
+                    x:Name="AttendancePicker"
+                    Title="Choose Attendance Type"
+                    SelectedIndexChanged="OnAttendanceTypeChanged">
+                    <Picker.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>Present</x:String>
+                            <x:String>Excused</x:String>
+                            <x:String>Unexcused</x:String>
+                        </x:Array>
+                    </Picker.ItemsSource>
+                </Picker>
+
+                <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
+                    <Button
+                        BackgroundColor="DarkGreen"
+                        Clicked="OnConfirmChangeAttendanceClicked"
+                        Text="Confirm"
+                        TextColor="White" />
+                    <Button
+                        BackgroundColor="Gray"
+                        Clicked="OnCancelChangeAttendanceClicked"
+                        Text="Cancel"
+                        TextColor="White" />
+                </HorizontalStackLayout>
+            </StackLayout>
+        </Frame>
     </Grid>
 </ContentPage>
